--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,12 @@ main .container {
   letter-spacing: .03125rem;
 }
 
+main .container .text h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 main .form {
   margin-top: 10px;
   margin: 10px auto;
