--- a/src/components/form.css
+++ b/src/components/form.css
@@ -67,3 +67,9 @@ main .form input:focus {
     border-radius: 5px;
     border: none;
 }
+
+@media (max-width: 1400px) {
+    main .container {
+        width: 90%;
+    }
+}
