--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -1,5 +1,5 @@
 .popup {
-    position: fixed;
+    position: absolute;
     top: 90px;
     left: 150px;
     margin: auto auto;
@@ -31,9 +31,13 @@
     cursor: pointer;
 }
 
-/* @media (max-width: 1400px) {
+@media (max-width: 1400px) {
     .popup {
-        width: 90%;
-        height: 90vh;
+        display: flex;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        right: 0;
     }
-} */
+} 
