--- a/src/components/header.css
+++ b/src/components/header.css
@@ -190,7 +190,7 @@ input[type="checkbox"]{
 }
 
 input[type="checkbox"]:checked ~ .check{
-    background: #fff;
+    background: #0045CD;
     /* box-shadow: 0 0 0 2000px black; */
     /* opacity: 0.4; */
     z-index: 1000;
@@ -205,7 +205,7 @@ input[type="checkbox"]:checked ~ .check::before{
     position: absolute;
     top: 2px;
     right: 2px;
-    background: black;
+    background: #fff;
     width: 16px;
     height: 16px;
     border-radius: 50%;
