--- a/src/components/form.css
+++ b/src/components/form.css
@@ -36,6 +36,7 @@ select {
     outline: none;
     padding: 5px;
     margin-left: 5px;
+    border-radius: 5px;
 }
 
 main .form input {
@@ -67,6 +68,10 @@ main .form input:focus {
     border-radius: 5px;
     border: none;
 }
+
+/* .calculate.disabled{
+    opacity: 0.5;
+} */
 
 
 
