--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -4,14 +4,13 @@
     left: 150px;
     margin: auto auto;
     width: 80%;
-    height: 80vh;
+    height: 90vh;
     display: flex;
     /* justify-content: center;
     align-items: center; */
     background: #F3F4F8;
     z-index: 10;
-    overflow: scroll;
-    overflow-x: hidden;
+    overflow: auto;
 }
 
 .popupText {
